# pq-xwing-kem

./: .gitignore  Cargo.toml  README.md  cargo_check.errors  cargo_test.errors  cargo_test.txt
code_packages/: 20251227_223947_pq-xwing-kem_src.txt  20251227_223947_pq-xwing-kem_tests.txt  20251227_225440_pq-xwing-kem_src.txt  20251227_225440_pq-xwing-kem_tests.txt
docs/: X-Wing general-purpose hybrid post-quantum KEM.txt  draft-ietf-lamps-pq-composite-kem-11.txt  draft-ietf-tls-ecdhe-mlkem-03.txt
scripts/: package_it.py
src/: combiner.rs  consts.rs  dh_trait.rs  error.rs  lib.rs  mlkem1024x25519.rs  mlkem1024x448.rs  mlkem768x25519.rs  xwing1024.rs  xwing1024x25519.rs  xwing1024x448.rs  xwing512.rs  xwing768.rs  xwing768x25519.rs  xwing_kem_1024.rs  xwing_kem_512.rs  xwing_kem_768.rs
tests/: combiner_tests.rs  cross_crate_tests.rs  derand_tests.rs  determinism_tests.rs  error_tests.rs  kat_tests.rs  mlkem1024x25519_tests.rs  mlkem1024x448_tests.rs  mlkem768x25519_tests.rs  xwing1024_tests.rs  xwing1024x25519_tests.rs  xwing1024x448_tests.rs  xwing512_tests.rs  xwing768_tests.rs  xwing768x25519_tests.rs  xwing_kem_tests.rs  xwing_spec_test_vectors.rs
