[package]
name = "pq-xwing-kem"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Slurp9187/pq-xwing-kem"
description = "Post-quantum hybrid X-Wing Key Encapsulation Mechanism (all ML-KEM variants + X25519)."
license = "MIT OR Apache-2.0"
keywords = ["post-quantum", "cryptography", "hybrid", "ML-KEM", "X25519"]
categories = ["cryptography"]

[dependencies]
# Cryptographic dependencies - pinned to specific versions for security and reproducibility
libcrux-ml-kem = "0.0.4" # Formally verified ML-KEM implementation
rand_core = { version = "0.9", features = ["os_rng"] }
sha3 = { version = "0.10.8", default-features = false }

x25519-dalek = { version = "2.0.1", default-features = false, features = ["zeroize", "static_secrets"] }

x448 = "0.6.0"

zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
thiserror = "2.0"

[dev-dependencies]
hex = { version = "0.4", features = ["serde"] }
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x-wing = {version = "0.1.0-pre.2",features = ["zeroize","os_rng"]}
